# routes/user_router.go
@@ -18,4 +18,5 @@ func UserRouter(api *gin.RouterGroup) {
 
 	api.GET("/users", middlewares.Auth(authRepository), middlewares.AuthAccess(authRepository), userController.GetAllUsers)
 	api.GET("/user/searchByEmail", middlewares.Auth(authRepository), middlewares.AuthAccess(authRepository), userController.GetUserByEmail)
+	api.GET("/user/:id", middlewares.Auth(authRepository), middlewares.AuthAccess(authRepository), userController.GetUserByID)
 }
